--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
     <link rel="stylesheet" type="text/css" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/sparta-bucket2.css">
 </head>
 
-<body class="bg-t3 center">
+<body class="bg center">
     <h1 class="title">2023 신년계획</h1>
     <p class="msg">올해는 꼭 모두 이뤄보자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t2 center">나만의 웹서비스 만들기</div> <!--완료 시 클래스에 done 추가하면 도장 찍힘-->
-        <div class="bucket img2-t5 center">나만의 앱 서비스 만들기</div>
+        <div class="bucket img1 center">나만의 웹서비스 만들기</div> <!--완료 시 클래스에 done 추가하면 도장 찍힘-->
+        <div class="bucket img2 center">나만의 앱 서비스 만들기</div> <!--속성값 뒤에 t1,t2,t3...을 추가해 커스텀 가능-->
         <div class="bucket img2 center">새로운 취미 배우기</div>
-        <div class="bucket img1-t4 center">주 4회 이상 운동하기</div>
+        <div class="bucket img1 center">주 4회 이상 운동하기</div>
         <div class="bucket img1 center">건강한 음식 위주로 먹기</div>
         <div class="bucket img2 center">나만의 서비스로 수익 만들기</div>
     </div>
